--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Joefrey &amp; Sheila</h1>
+							<h1>Khac Hieu &amp; Thuy An</h1>
 							<h2>We Are Getting Married</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
 							<p><a href="#" class="btn btn-default btn-sm">Save the date</a></p>
@@ -279,7 +279,7 @@
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-1.jpg); "> 
 						<a href="images/gallery-1.jpg">
 							<div class="case-studies-summary">
-								<span>14 Photos</span>
+								<!-- <span>14 Photos</span> -->
 								<h2>Two Glas of Juice</h2>
 							</div>
 						</a>
@@ -287,7 +287,7 @@
 					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-2.jpg); ">
 						<a href="#" class="color-2">
 							<div class="case-studies-summary">
-								<span>30 Photos</span>
+								<!-- <span>30 Photos</span> -->
 								<h2>Timer starts now!</h2>
 							</div>
 						</a>
@@ -297,7 +297,7 @@
 					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-3.jpg); ">
 						<a href="#" class="color-3">
 							<div class="case-studies-summary">
-								<span>90 Photos</span>
+								<!-- <span>90 Photos</span> -->
 								<h2>Beautiful sunset</h2>
 							</div>
 						</a>
@@ -305,7 +305,7 @@
 					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-4.jpg); ">
 						<a href="#" class="color-4">
 							<div class="case-studies-summary">
-								<span>12 Photos</span>
+								<!-- <span>12 Photos</span> -->
 								<h2>Company's Conference Room</h2>
 							</div>
 						</a>
@@ -314,7 +314,7 @@
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-5.jpg); ">
 							<a href="#" class="color-3">
 								<div class="case-studies-summary">
-									<span>50 Photos</span>
+									<!-- <span>50 Photos</span> -->
 									<h2>Useful baskets</h2>
 								</div>
 							</a>
@@ -322,13 +322,13 @@
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-6.jpg); ">
 							<a href="#" class="color-4">
 								<div class="case-studies-summary">
-									<span>45 Photos</span>
+									<!-- <span>45 Photos</span> -->
 									<h2>Skater man in the road</h2>
 								</div>
 							</a>
 						</li>
 
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-7.jpg); ">
+<!-- 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-7.jpg); ">
 							<a href="#" class="color-4">
 								<div class="case-studies-summary">
 									<span>35 Photos</span>
@@ -352,7 +352,7 @@
 									<h2>Beautiful sunset</h2>
 								</div>
 							</a>
-						</li>
+						</li> -->
 					</ul>		
 				</div>
 			</div>
@@ -412,7 +412,7 @@
 		</div>
 	</div>
 
-	<div id="fh5co-testimonial">
+<!-- 	<div id="fh5co-testimonial">
 		<div class="container">
 			<div class="row">
 				<div class="row animate-box">
@@ -464,7 +464,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	<div id="fh5co-services" class="fh5co-section-gray">
 		<div class="container">
@@ -562,15 +562,15 @@
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
-						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
+						<small class="block">&copy; 2020 J&D Solutions. All Rights Reserved.</small> 
+						<small class="block">Designed by <a href="https://jndsolutions.com/" target="_blank">jndsolutions.com</a>
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
+							<!-- <li><a href="#"><i class="icon-twitter"></i></a></li> -->
+							<li><a href="https://www.facebook.com/jun.moc/"><i class="icon-facebook"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/mai-nguyen-a51a92b7"><i class="icon-linkedin"></i></a></li>
+							<!-- <li><a href="#"><i class="icon-dribbble"></i></a></li> -->
 						</ul>
 					</p>
 				</div>
