--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<title>An Lai & Khac Hieu Wedding &mdash; Nov 22th 2020 </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="An Lai & Khac Hieu Wedding" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
+	<meta name="keywords" content="Welcome to our Wedding events" />
 	<meta name="author" content="jndsolutions" />
 
   <!-- 
