--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				</div>
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
-						<li class="active"><a href="#fh5co-header">Home</a></li>
+						<li class="active"><a href="index.html">Home</a></li>
 						<li><a href="#fh5co-couple">Events</a></li>
 						<li><a href="#fh5co-couple-story">Story</a></li>
 						<li><a href="#fh5co-gallery">Gallery</a></li>
